ingestion starter
